Fix Auth for User
